Bug 299639 - kpr file from 2006 has good thumbnail in Stage, but when opened is empty but for question marks
Summary: kpr file from 2006 has good thumbnail in Stage, but when opened is empty but ...
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-08 18:16 UTC by Bob Igo
Modified: 2012-05-16 11:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kpr file from 02/2006 that triggers this bug (52.32 KB, application/octet-stream)
2012-05-08 18:19 UTC, Bob Igo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bob Igo 2012-05-08 18:16:56 UTC
An old kpr file from 02/2006 (Mandriva distro's packaged version of KPresenter) will pass through Stage's loader or calligraconverter, but the result is missing 99% of its content.

Reproducible: Always

Steps to Reproduce:
1.Fire up Stage.
2.Open my old kpr file from 02/2006 (Mandriva distro's packaged version of KPresenter).
3.Note the results.

Alternate flow:

1.Run calligraconverter on the kpr file, choosing either an odp or a pdf output.
2.Open the target file in any editor/viewer for the file type.
3.Note the results.
Actual Results:  
Any post-conversion/post-load presentations (whether pdf or odp) are largely blank, with question marks in the headers, bodies, and footers of most of the post-conversion/post-load presentation.  A few slide titles are actually correct, but that seems to be the only actual content that came through in the conversion.

I have tried viewing the results in multiple applications, and it always looks the same.

Expected Results:  
A fully working import/conversion should retain the original kpr file's contents, even if formatting is off.

I could gladly supply the kpr file that Stage is having trouble with.

I've marked this as Critical because it does technically cause a user to lose access to legacy data.  Obviously, the priority of the bug is debatable.
Comment 1 Bob Igo 2012-05-08 18:19:16 UTC
Created attachment 70963 [details]
kpr file from 02/2006 that triggers this bug
Comment 2 T Zachmann 2012-05-08 20:20:06 UTC
Git commit 14b686fb0f8aad957dac7fb69d2f16e475e15dd7 by Thorsten Zachmann.
Committed on 08/05/2012 at 22:15.
Pushed by zachmann into branch 'master'.

Strip white spaces when importing kpr files

Seems this breakage went unnoticed when the stripping of whitespaces was removed.
Fix the problem by stripping the white spaces when importing the old documents
which always stripped the white spaces.

Ok to backport?

M  +2    -0    filters/stage/kpr2odf/Filterkpr2odf.cpp

http://commits.kde.org/calligra/14b686fb0f8aad957dac7fb69d2f16e475e15dd7
Comment 3 T Zachmann 2012-05-16 11:21:12 UTC
Git commit 4084b669b275b842a5e5911b243fd4a0a68ffc78 by Thorsten Zachmann.
Committed on 08/05/2012 at 22:15.
Pushed by zachmann into branch 'calligra/2.4'.

Strip white spaces when importing kpr files

Seems this breakage went unnoticed when the stripping of whitespaces was removed.
Fix the problem by stripping the white spaces when importing the old documents
which always stripped the white spaces.

Reviewed-by: boemann
(cherry picked from commit 14b686fb0f8aad957dac7fb69d2f16e475e15dd7)

M  +2    -0    filters/stage/kpr2odf/Filterkpr2odf.cpp

http://commits.kde.org/calligra/4084b669b275b842a5e5911b243fd4a0a68ffc78