Strip white spaces when importing kpr files

Seems this breakage went unnoticed when the stripping of whitespaces was removed.
Fix the problem by stripping the white spaces when importing the old documents
which always stripped the white spaces.

Reviewed-by: boemann
BUG: 299639
(cherry picked from commit 14b686fb0f8aad957dac7fb69d2f16e475e15dd7)